@@ -3,6 +3,7 @@ h1. CHANGELOG
 h3. 3.1.1 unreleased
 
 * include gem 'high_voltage' so Bootstrap templates will work with all example apps
+* move auth links to a new partial to accommodate Bootstrap templates
 
 h3. 3.1.0 October 31, 2015
 
